--- a/src/app/header/muslims/muslims.component.html
+++ b/src/app/header/muslims/muslims.component.html
@@ -1,44 +1,44 @@
 
 <div class="py-3 mt-3 -mx-3 overflow-y-auto whitespace-nowrap scroll-hidden">
   <!-- <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">الاخبار</a>
+    routerLink="#">الاخبار</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">المقالات</a>
+    routerLink="#">المقالات</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">الرموز الاسلامية هلال</a>
+    routerLink="#">الرموز الاسلامية هلال</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">اركان الاسلام</a>
+    routerLink="#">اركان الاسلام</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">القران</a>
+    routerLink="#">القران</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">الشريعة</a>
+    routerLink="#">الشريعة</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">المنبر</a>
+    routerLink="#">المنبر</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">المنامات</a>
+    routerLink="#">المنامات</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">الجوامع</a>
+    routerLink="#">الجوامع</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">فتاوي</a> -->
+    routerLink="#">فتاوي</a> -->
     <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-    href="ministries">الوزارات</a>
+    routerLink="ministries">الوزارات</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="quran">القران</a>
+    routerLink="quran">القران</a>
 </div>
 قوله صلى الله عليه وسلم: ((ثلاث لا يغل عليهن قلب مسلم: إخلاص العمل لله، والنصح لأئمة المسلمين، ولزوم جماعتهم فإن دعوتهم تحيط من ورائهم))
 <section class="bg-white dark:bg-gray-900">
   <div class="container px-6 py-8 mx-auto">
       <div class="lg:flex lg:-mx-2">
           <div class="space-y-3 lg:w-1/5 lg:px-2 lg:space-y-4">
-              <a href="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Jackets & Coats</a>
-              <a href="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Hoodies</a>
-              <a href="#" class="block font-medium text-blue-600 dark:text-blue-500 hover:underline">T-shirts & Vests</a>
-              <a href="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Shirts</a>
-              <a href="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Blazers & Suits</a>
-              <a href="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Jeans</a>
-              <a href="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Trousers</a>
-              <a href="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Shorts</a>
-              <a href="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Underwear</a>
+              <a routerLink="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Jackets & Coats</a>
+              <a routerLink="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Hoodies</a>
+              <a routerLink="#" class="block font-medium text-blue-600 dark:text-blue-500 hover:underline">T-shirts & Vests</a>
+              <a routerLink="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Shirts</a>
+              <a routerLink="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Blazers & Suits</a>
+              <a routerLink="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Jeans</a>
+              <a routerLink="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Trousers</a>
+              <a routerLink="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Shorts</a>
+              <a routerLink="#" class="block font-medium text-gray-500 dark:text-gray-300 hover:underline">Underwear</a>
           </div>
 
           <div class="mt-6 lg:mt-0 lg:px-2 lg:w-4/5 ">
@@ -228,7 +228,7 @@
         <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">{{ minster.position }}</p>
 
         <div class="flex mt-3 -mx-2">
-            <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Reddit">
+            <a routerLink="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Reddit">
                 <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -237,7 +237,7 @@
                 </svg>
             </a>
 
-            <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white"
+            <a routerLink="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white"
                 aria-label="Facebook">
                 <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -247,7 +247,7 @@
                 </svg>
             </a>
 
-            <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Github">
+            <a routerLink="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Github">
                 <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
