--- a/src/app/header/religions/religions-books/religions-books.component.html
+++ b/src/app/header/religions/religions-books/religions-books.component.html
@@ -1,26 +1,26 @@
 <div class="py-3 mt-3 -mx-3 overflow-y-auto whitespace-nowrap scroll-hidden">
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">الاخبار</a>
+    routerLink="#">الاخبار</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">المقالات</a>
+    routerLink="#">المقالات</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">الرموز الاسلامية هلال</a>
+    routerLink="#">الرموز الاسلامية هلال</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">اركان الاسلام</a>
+    routerLink="#">اركان الاسلام</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">القران</a>
+    routerLink="#">القران</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">الشريعة</a>
+    routerLink="#">الشريعة</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">المنبر</a>
+    routerLink="#">المنبر</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">المنامات</a>
+    routerLink="#">المنامات</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">الجوامع</a>
+    routerLink="#">الجوامع</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">فتاوي</a>
+    routerLink="#">فتاوي</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="quran">القران</a>
+    routerLink="quran">القران</a>
 </div>
 <p>صورة للاديان مع النجوم
 
