--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
+<iframe style="display:none;" src="{{LoginURL}}" id="iframeAccount"></iframe>
+
 <!-- Nav -->
-<nav class="bg-white shadow dark:bg-gray-800">
+<div class="bg-white shadow dark:bg-gray-800 px-3 py-3 mx-auto">
   <!-- <div class="container px-3 py-3 mx-auto"> -->
-    <div class="px-3 py-3 mx-auto">
 
     <app-header></app-header>
     <!-- Container pages -->
@@ -12,6 +13,5 @@
 <!-- <app-footer-bottom ></app-footer-bottom> -->
 <app-footer></app-footer>
 
-  </div>
-</nav>
+</div>
 
