--- a/src/app/footer/cookies/cookies.component.html
+++ b/src/app/footer/cookies/cookies.component.html
@@ -12,8 +12,8 @@
       from being stored however this may downgrade or 'break' certain elements of the sites functionality.</p>
 
   <p>For more general information on cookies, please read <a
-          href="https://www.privacypolicyonline.com/what-are-cookies/">"What Are Cookies"</a>. Information regarding
-      cookies from this Cookies Policy are from <a href="https://www.generateprivacypolicy.com/">the Privacy Policy
+          routerLink="https://www.privacypolicyonline.com/what-are-cookies/">"What Are Cookies"</a>. Information regarding
+      cookies from this Cookies Policy are from <a routerLink="https://www.generateprivacypolicy.com/">the Privacy Policy
           Generator</a>.</p>
 
   <p><strong>How We Use Cookies</strong></p>
@@ -29,7 +29,7 @@
       to do this). Be aware that disabling cookies will affect the functionality of this and many other websites that
       you visit. Disabling cookies will usually result in also disabling certain functionality and features of the
       this site. Therefore it is recommended that you do not disable cookies. This Cookies Policy was created with the
-      help of the <a href="https://www.cookiepolicygenerator.com/cookie-policy-generator/">Cookies Policy Generator
+      help of the <a routerLink="https://www.cookiepolicygenerator.com/cookie-policy-generator/">Cookies Policy Generator
           from CookiePolicyGenerator.com</a>.</p>
   <p><strong>The Cookies We Set</strong></p>
 
