--- a/src/app/footer/policy/policy.component.html
+++ b/src/app/footer/policy/policy.component.html
@@ -12,7 +12,7 @@
     with this Privacy Policy. This Privacy Policy has been created with the help
     of the
     <a
-      href="https://www.termsfeed.com/privacy-policy-generator/"
+      routerLink="https://www.termsfeed.com/privacy-policy-generator/"
       target="_blank"
       >Privacy Policy Generator</a
     >.
@@ -93,7 +93,7 @@
       <p>
         <strong>Website</strong> refers to theislamicnation, accessible from
         <a
-          href="www.theislamicnation.com"
+          routerLink="www.theislamicnation.com"
           rel="external nofollow noopener"
           target="_blank"
           >www.theislamicnation.com</a
@@ -178,7 +178,7 @@
       read &quot;Where can I change the settings for disabling, or deleting
       local shared objects?&quot; available at
       <a
-        href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_"
+        routerLink="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_"
         rel="external nofollow noopener"
         target="_blank"
         >https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_</a
@@ -199,7 +199,7 @@
     Persistent Cookies remain on Your personal computer or mobile device when
     You go offline, while Session Cookies are deleted as soon as You close Your
     web browser. You can learn more about cookies here:
-    <a href="https://www.termsfeed.com/blog/cookies/" target="_blank"
+    <a routerLink="https://www.termsfeed.com/blog/cookies/" target="_blank"
       >All About Cookies by TermsFeed</a
     >.
   </p>
@@ -452,7 +452,7 @@
         The information gathered by theislamicnation is held in accordance with its
         Privacy Policy:
         <a
-          href="https://theislamicnation.com/policy/"
+          routerLink="https://theislamicnation.com/policy/"
           rel="external nofollow noopener"
           target="_blank"
           >https://theislamicnation.com/policy/</a
