--- a/src/app/header/islam/provisions/provisions.component.html
+++ b/src/app/header/islam/provisions/provisions.component.html
@@ -12,32 +12,32 @@
         </div>
         <ul>
           <li class="toclevel-1 tocsection-1"><a
-              href="#.D8.A3.D9.86.D9.88.D8.A7.D8.B9_.D8.A7.D9.84.D8.A3.D8.AD.D9.83.D8.A7.D9.85_.D8.A7.D9.84.D8.B4.D8.B1.D8.B9.D9.8A.D8.A9"><span
+              routerLink="#.D8.A3.D9.86.D9.88.D8.A7.D8.B9_.D8.A7.D9.84.D8.A3.D8.AD.D9.83.D8.A7.D9.85_.D8.A7.D9.84.D8.B4.D8.B1.D8.B9.D9.8A.D8.A9"><span
                 class="tocnumber">١</span> <span class="toctext"><b>أنواع الأحكام الشرعية</b></span></a>
             <ul>
               <li class="toclevel-2 tocsection-2"><a
-                  href="#.D8.A7.D9.84.D8.AD.D9.83.D9.85_.D8.A7.D9.84.D8.AA.D9.83.D9.84.D9.8A.D9.81.D9.8A"><span
+                  routerLink="#.D8.A7.D9.84.D8.AD.D9.83.D9.85_.D8.A7.D9.84.D8.AA.D9.83.D9.84.D9.8A.D9.81.D9.8A"><span
                     class="tocnumber">١.١</span> <span class="toctext">الحكم التكليفي</span></a></li>
               <li class="toclevel-2 tocsection-3"><a
-                  href="#.D8.A7.D9.84.D8.AD.D9.83.D9.85_.D8.A7.D9.84.D9.88.D8.B6.D8.B9.D9.8A"><span
+                  routerLink="#.D8.A7.D9.84.D8.AD.D9.83.D9.85_.D8.A7.D9.84.D9.88.D8.B6.D8.B9.D9.8A"><span
                     class="tocnumber">١.٢</span> <span class="toctext">الحكم الوضعي</span></a></li>
             </ul>
           </li>
           <li class="toclevel-1 tocsection-4"><a
-              href="#.D9.85.D9.82.D8.A7.D8.B1.D9.86.D8.A9_.D8.A8.D9.8A.D9.86_.D8.A7.D9.84.D8.AD.D9.83.D9.85_.D8.A7.D9.84.D8.AA.D9.83.D9.84.D9.8A.D9.81.D9.8A_.D9.88.D8.A7.D9.84.D8.AD.D9.83.D9.85_.D8.A7.D9.84.D9.88.D8.B6.D8.B9.D9.8A"><span
+              routerLink="#.D9.85.D9.82.D8.A7.D8.B1.D9.86.D8.A9_.D8.A8.D9.8A.D9.86_.D8.A7.D9.84.D8.AD.D9.83.D9.85_.D8.A7.D9.84.D8.AA.D9.83.D9.84.D9.8A.D9.81.D9.8A_.D9.88.D8.A7.D9.84.D8.AD.D9.83.D9.85_.D8.A7.D9.84.D9.88.D8.B6.D8.B9.D9.8A"><span
                 class="tocnumber">٢</span> <span class="toctext"><b>مقارنة بين الحكم التكليفي والحكم
                   الوضعي</b></span></a></li>
-          <li class="toclevel-1 tocsection-5"><a href="#.D8.A7.D9.84.D9.85.D8.B1.D8.A7.D8.AC.D8.B9"><span
+          <li class="toclevel-1 tocsection-5"><a routerLink="#.D8.A7.D9.84.D9.85.D8.B1.D8.A7.D8.AC.D8.B9"><span
                 class="tocnumber">٣</span> <span class="toctext"><b>المراجع</b></span></a></li>
         </ul>
       </div>
       <ul class="related-articles-list1 columns related-articles-list1_mobile">
         <li><span class="icon"></span><span>اقرأ أيضاً</span></li>
         <li><a
-            href="%D8%AD%D9%83%D9%85_%D8%A7%D9%84%D8%B1%D8%A8%D8%A7_%D9%81%D9%8A_%D8%A7%D9%84%D8%A7%D8%B3%D9%84%D8%A7%D9%85"><span>
+            routerLink="%D8%AD%D9%83%D9%85_%D8%A7%D9%84%D8%B1%D8%A8%D8%A7_%D9%81%D9%8A_%D8%A7%D9%84%D8%A7%D8%B3%D9%84%D8%A7%D9%85"><span>
               حكم الربا في الاسلام</span></a></li>
         <li><a
-            href="%D8%A3%D9%86%D9%88%D8%A7%D8%B9_%D8%A7%D9%84%D8%A3%D9%85%D9%88%D8%A7%D9%84_%D8%A7%D9%84%D8%B1%D8%A8%D9%88%D9%8A%D8%A9"><span>
+            routerLink="%D8%A3%D9%86%D9%88%D8%A7%D8%B9_%D8%A7%D9%84%D8%A3%D9%85%D9%88%D8%A7%D9%84_%D8%A7%D9%84%D8%B1%D8%A8%D9%88%D9%8A%D8%A9"><span>
               أنواع الأموال الربوية</span></a></li>
       </ul>
       <script type="text/javascript" id="art_leaderboard_mobile">
@@ -59,9 +59,9 @@
       </h3>
       <p>هو خطاب الشارع المتعلّق بأفعال المكلفين على جهة الاقتضاء أو التخيير،<sup
           id="cite_ref-c57c0eaf_b0dd_43aa_b6ee_ea58845952a6_1-0" class="reference"><a
-            href="#cite_note-c57c0eaf_b0dd_43aa_b6ee_ea58845952a6-1">[١]</a></sup>ويمكن تقسيم الحكم التكليفي كما
+            routerLink="#cite_note-c57c0eaf_b0dd_43aa_b6ee_ea58845952a6-1">[١]</a></sup>ويمكن تقسيم الحكم التكليفي كما
         يأتي:<sup id="cite_ref-300d37f2_9afa_4ef4_9c1e_4da72475d2d5_2-0" class="reference"><a
-            href="#cite_note-300d37f2_9afa_4ef4_9c1e_4da72475d2d5-2">[٢]</a></sup></p>
+            routerLink="#cite_note-300d37f2_9afa_4ef4_9c1e_4da72475d2d5-2">[٢]</a></sup></p>
       <ul>
         <li> <span class="ql-ui"></span><strong>الواجب</strong></li>
       </ul>
@@ -98,14 +98,14 @@
           الوضعي</span></h3>
       <p>خطاب اللَّه -تعالى- الذي اقتضى جعلُ أمرٍ علامة لحكم تكليفي، وجعله مرتبطًا به؛ بكونه سببًا له، أو شرطاً أو
         مانعاً،<sup id="cite_ref-a205d433_0cb2_4174_b9b1_a229f7d22f6b_3-0" class="reference"><a
-            href="#cite_note-a205d433_0cb2_4174_b9b1_a229f7d22f6b-3">[٣]</a></sup>وينقسم إلى:<sup
+            routerLink="#cite_note-a205d433_0cb2_4174_b9b1_a229f7d22f6b-3">[٣]</a></sup>وينقسم إلى:<sup
           id="cite_ref-e928996b_1b5e_409f_b175_0b1118d7cf29_4-0" class="reference"><a
-            href="#cite_note-e928996b_1b5e_409f_b175_0b1118d7cf29-4">[٤]</a></sup></p>
+            routerLink="#cite_note-e928996b_1b5e_409f_b175_0b1118d7cf29-4">[٤]</a></sup></p>
       <ul>
         <li> <span class="ql-ui"></span><strong>السبب</strong></li>
       </ul>
       <p>ما يلزم من وجوده وجود الحكم، ومن عدمه العدم، مثاله: <a class="external text"
-          href="https://mawdoo3.com/%D9%85%D8%AA%D9%89_%D9%8A%D9%83%D9%88%D9%86_%D9%88%D9%82%D8%AA_%D8%A7%D9%84%D8%B2%D9%88%D8%A7%D9%84">زوال
+          routerLink="https://mawdoo3.com/%D9%85%D8%AA%D9%89_%D9%8A%D9%83%D9%88%D9%86_%D9%88%D9%82%D8%AA_%D8%A7%D9%84%D8%B2%D9%88%D8%A7%D9%84">زوال
           الشمس</a>، بوجوده تجب صلاة الظهر، وبعدم وجوده لا تجب؛ أي لزم من وجوده وجود الحكم ومن عدمه عدم الحكم.
       </p>
       <ul>
@@ -121,7 +121,7 @@
         الإرث.
       </p>
       <p>ويترتب على هذه الثلاثة السابقة الأقسام الآتية:<sup id="cite_ref-7be4d25f_e27d_4d76_89ad_34007804f019_5-0"
-          class="reference"><a href="#cite_note-7be4d25f_e27d_4d76_89ad_34007804f019-5">[٥]</a></sup></p>
+          class="reference"><a routerLink="#cite_note-7be4d25f_e27d_4d76_89ad_34007804f019-5">[٥]</a></sup></p>
       <ul>
         <li> <span class="ql-ui"></span><strong>الصحيح</strong> </li>
       </ul>
@@ -138,7 +138,7 @@
         <li> <span class="ql-ui"></span><strong>العزيمة</strong> </li>
       </ul>
       <p>الحكم الثابت <a class="external text"
-          href="https://mawdoo3.com/%D8%AA%D8%B9%D8%B1%D9%8A%D9%81_%D8%A7%D9%84%D8%A3%D8%AF%D9%84%D8%A9_%D8%A7%D9%84%D8%B4%D8%B1%D8%B9%D9%8A%D8%A9">بدليل
+          routerLink="https://mawdoo3.com/%D8%AA%D8%B9%D8%B1%D9%8A%D9%81_%D8%A7%D9%84%D8%A3%D8%AF%D9%84%D8%A9_%D8%A7%D9%84%D8%B4%D8%B1%D8%B9%D9%8A%D8%A9">بدليل
           شرعيٍ</a> خال من معارض راجح، كوجوب الصلوات الخمس.
       </p>
       <ul>
@@ -152,57 +152,57 @@
       <ul>
         <li> <span class="ql-ui"></span>الحكم التكليفي متعلِّق بفعل العبد أو تركه، أو التخيير بين الفعل والترك، أمَّا
           الوضعي فهو علامة يترتب عليها الحكم التكليفي وجوداً وعدماً، مثال ذلك: مِلكُ <a class="external text"
-            href="https://mawdoo3.com/%D9%85%D8%A7_%D9%87%D9%88_%D8%A7%D9%84%D9%86%D8%B5%D8%A7%D8%A8_%D9%81%D9%8A_%D8%A7%D9%84%D8%B2%D9%83%D8%A7%D8%A9">نصاب
+            routerLink="https://mawdoo3.com/%D9%85%D8%A7_%D9%87%D9%88_%D8%A7%D9%84%D9%86%D8%B5%D8%A7%D8%A8_%D9%81%D9%8A_%D8%A7%D9%84%D8%B2%D9%83%D8%A7%D8%A9">نصاب
             الزكاة</a>، وحولان الحول (حكم وضعي)، يترتب على وجودهما وجوب الزكاة، وهو (حكم تكليفي) يفعلُه المكلَّفُ أو لا
           يفعلُه، ويترتب على فعله الثواب وعلى تركه العقاب.<sup id="cite_ref-a63aa386_7933_43bd_823d_ed0be4cc8378_6-0"
-            class="reference"><a href="#cite_note-a63aa386_7933_43bd_823d_ed0be4cc8378-6">[٦]</a></sup></li>
+            class="reference"><a routerLink="#cite_note-a63aa386_7933_43bd_823d_ed0be4cc8378-6">[٦]</a></sup></li>
         <li> <span class="ql-ui"></span>الحكم التكليفي فيه طلب الفعل، أو طلب الترك، أو التخيير بين الفعل والترك، أمَّا
           الحكم الوضعي فليس فيه طلب ولا تخيير، والحكم التكليفي في مقدور المكلَّف فعلُه أو تركُه، وأمَّا الوضعي فليس
           داخلاً في مقدور المكلَّف.<sup id="cite_ref-753ba3bb_dede_4da0_a69d_e3d5a7037201_7-0" class="reference"><a
-              href="#cite_note-753ba3bb_dede_4da0_a69d_e3d5a7037201-7">[٧]</a></sup></li>
+              routerLink="#cite_note-753ba3bb_dede_4da0_a69d_e3d5a7037201-7">[٧]</a></sup></li>
       </ul>
       <p>مثال: زوال الشمس (حكم وضعي) ليس فيه طلب فعلٍ أو تركٍ، وليس داخلاً في مقدور المكلَّف، أمَّا وجوب صلاة الظهر فهو
         (حكم تكليفي) مطلوب فعله، وهو داخل في مقدور المكلَّف.<sup id="cite_ref-753ba3bb_dede_4da0_a69d_e3d5a7037201_7-1"
-          class="reference"><a href="#cite_note-753ba3bb_dede_4da0_a69d_e3d5a7037201-7">[٧]</a></sup></p>
+          class="reference"><a routerLink="#cite_note-753ba3bb_dede_4da0_a69d_e3d5a7037201-7">[٧]</a></sup></p>
       <h2 class="references-title"><span class="mw-headline"
           id=".D8.A7.D9.84.D9.85.D8.B1.D8.A7.D8.AC.D8.B9"><b>المراجع</b></span> <span
           class="text-center sign arrow-down"></span></h2>
       <ol class="references">
         <li id="cite_note-c57c0eaf_b0dd_43aa_b6ee_ea58845952a6-1"><span class="mw-cite-backlink"><a
-              href="#cite_ref-c57c0eaf_b0dd_43aa_b6ee_ea58845952a6_1-0">↑</a></span> <span class="reference-text">محمد
-            الزحيلي، <i><a rel="nofollow" class="external text" href="https://shamela.ws/book/17118/274">الوجيز في أصول
+              routerLink="#cite_ref-c57c0eaf_b0dd_43aa_b6ee_ea58845952a6_1-0">↑</a></span> <span class="reference-text">محمد
+            الزحيلي، <i><a rel="nofollow" class="external text" routerLink="https://shamela.ws/book/17118/274">الوجيز في أصول
                 الفقه</a></i>، صفحة 1 -393. بتصرّف.</span>
         </li>
         <li id="cite_note-300d37f2_9afa_4ef4_9c1e_4da72475d2d5-2"><span class="mw-cite-backlink"><a
-              href="#cite_ref-300d37f2_9afa_4ef4_9c1e_4da72475d2d5_2-0">↑</a></span> <span class="reference-text">جلال
-            الدين المحلي، <i><a rel="nofollow" class="external text" href="https://shamela.ws/book/21547/60">شرح الورقات
+              routerLink="#cite_ref-300d37f2_9afa_4ef4_9c1e_4da72475d2d5_2-0">↑</a></span> <span class="reference-text">جلال
+            الدين المحلي، <i><a rel="nofollow" class="external text" routerLink="https://shamela.ws/book/21547/60">شرح الورقات
                 في أصول الفقه</a></i>، صفحة 71 -76. بتصرّف.</span>
         </li>
         <li id="cite_note-a205d433_0cb2_4174_b9b1_a229f7d22f6b-3"><span class="mw-cite-backlink"><a
-              href="#cite_ref-a205d433_0cb2_4174_b9b1_a229f7d22f6b_3-0">↑</a></span> <span class="reference-text">محمد
-            الزحيلي، <i><a rel="nofollow" class="external text" href="https://shamela.ws/book/17118/275#p1">الوجيز في
+              routerLink="#cite_ref-a205d433_0cb2_4174_b9b1_a229f7d22f6b_3-0">↑</a></span> <span class="reference-text">محمد
+            الزحيلي، <i><a rel="nofollow" class="external text" routerLink="https://shamela.ws/book/17118/275#p1">الوجيز في
                 أصول الفقه</a></i>، صفحة 1 -294. بتصرّف.</span>
         </li>
         <li id="cite_note-e928996b_1b5e_409f_b175_0b1118d7cf29-4"><span class="mw-cite-backlink"><a
-              href="#cite_ref-e928996b_1b5e_409f_b175_0b1118d7cf29_4-0">↑</a></span> <span class="reference-text">عياض
-            السلمي، <i><a rel="nofollow" class="external text" href="https://shamela.ws/book/36379/60#p1">أصول الفقه
+              routerLink="#cite_ref-e928996b_1b5e_409f_b175_0b1118d7cf29_4-0">↑</a></span> <span class="reference-text">عياض
+            السلمي، <i><a rel="nofollow" class="external text" routerLink="https://shamela.ws/book/36379/60#p1">أصول الفقه
                 الذي لا يسع الفقه جهله</a></i>، صفحة 56 -59. بتصرّف.</span>
         </li>
         <li id="cite_note-7be4d25f_e27d_4d76_89ad_34007804f019-5"><span class="mw-cite-backlink"><a
-              href="#cite_ref-7be4d25f_e27d_4d76_89ad_34007804f019_5-0">↑</a></span> <span class="reference-text">محمد
-            الزحيلي، <i><a rel="nofollow" class="external text" href="https://al-maktaba.org/book/33154/424#p1">الوجيز
+              routerLink="#cite_ref-7be4d25f_e27d_4d76_89ad_34007804f019_5-0">↑</a></span> <span class="reference-text">محمد
+            الزحيلي، <i><a rel="nofollow" class="external text" routerLink="https://al-maktaba.org/book/33154/424#p1">الوجيز
                 في أصول الفقه</a></i>، صفحة 1 -423 -426. بتصرّف.</span>
         </li>
         <li id="cite_note-a63aa386_7933_43bd_823d_ed0be4cc8378-6"><span class="mw-cite-backlink"><a
-              href="#cite_ref-a63aa386_7933_43bd_823d_ed0be4cc8378_6-0">↑</a></span> <span class="reference-text">محمد
-            الزحيلي، <i><a rel="nofollow" class="external text" href="https://shamela.ws/book/17118/275#p1">الوجيز في
+              routerLink="#cite_ref-a63aa386_7933_43bd_823d_ed0be4cc8378_6-0">↑</a></span> <span class="reference-text">محمد
+            الزحيلي، <i><a rel="nofollow" class="external text" routerLink="https://shamela.ws/book/17118/275#p1">الوجيز في
                 أصول الفقه</a></i>، صفحة 1 -294 -295. بتصرّف.</span>
         </li>
         <li id="cite_note-753ba3bb_dede_4da0_a69d_e3d5a7037201-7"><span class="mw-cite-backlink"><b>^</b> <a
-              href="#cite_ref-753ba3bb_dede_4da0_a69d_e3d5a7037201_7-0"><sup><i><b>أ</b></i></sup></a> <a
-              href="#cite_ref-753ba3bb_dede_4da0_a69d_e3d5a7037201_7-1"><sup><i><b>ب</b></i></sup></a></span> <span
+              routerLink="#cite_ref-753ba3bb_dede_4da0_a69d_e3d5a7037201_7-0"><sup><i><b>أ</b></i></sup></a> <a
+              routerLink="#cite_ref-753ba3bb_dede_4da0_a69d_e3d5a7037201_7-1"><sup><i><b>ب</b></i></sup></a></span> <span
             class="reference-text">محمد الزحيلي، <i><a rel="nofollow" class="external text"
-                href="https://shamela.ws/book/17118/276#p1">الوجيز في أصول الفقه</a></i>، صفحة 1 -294 -295.
+                routerLink="https://shamela.ws/book/17118/276#p1">الوجيز في أصول الفقه</a></i>، صفحة 1 -294 -295.
             بتصرّف.</span>
         </li>
       </ol>
