--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -10,7 +10,7 @@
 [routerLink]="['islam']">الاسلام</a>
 
 <!-- <a i18n class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-href="/muslims">المسلمون صفحة البحث</a> -->
+routerLink="/muslims">المسلمون صفحة البحث</a> -->
     <!-- test test
       stateCourts
       الشريعة الأساسية
