--- a/src/app/header/religions/religions-books/quran/quran.component.html
+++ b/src/app/header/religions/religions-books/quran/quran.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="mt-2">
-      <a href="quran/souwar/{{Soura.index}}" class="text-2xl font-bold text-gray-700 dark:text-white hover:text-gray-600 dark:hover:text-gray-200 hover:underline">{{Soura.name}}</a>
+      <a routerLink="quran/souwar/{{Soura.index}}" class="text-2xl font-bold text-gray-700 dark:text-white hover:text-gray-600 dark:hover:text-gray-200 hover:underline">{{Soura.name}}</a>
       <p class="mt-2 text-gray-600 dark:text-gray-300">{{Soura.aya[0].text}}</p>
   </div>
 
