--- a/src/app/header/the-creator/names/names.component.html
+++ b/src/app/header/the-creator/names/names.component.html
@@ -3,11 +3,11 @@
 
     <div *ngFor="let Name of Names"
       class="max-w-xl bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-      <!-- <a href="#">
+      <!-- <a routerLink="#">
 					<img class="rounded-t-lg px-5 py-2"  src="http://placeimg.com/640/480/sports" alt="step3">
     </a> -->
       <div class="p-5">
-        <a href="#">
+        <a routerLink="#">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
             {{ Name.name}}</h5>
 
@@ -17,7 +17,7 @@
         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
           {{ Name.en.desc}}
         </p>
-        <a href="names/{{ Name.id}}"
+        <a routerLink="names/{{ Name.id}}"
           class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
           Read more
         </a>
