--- a/src/app/header/user-notifications-menu/user-notifications-menu.component.html
+++ b/src/app/header/user-notifications-menu/user-notifications-menu.component.html
@@ -22,39 +22,39 @@
 
   <mat-menu #menu="matMenu"
     class="absolute right-0 z-20 mt-2 overflow-hidden bg-white rounded-md shadow-lg w-80 dark:bg-gray-800">
-    <a href="#"
+    <a routerLink="#"
       class="flex items-center px-4 py-3 -mx-2 transition-colors duration-200 transform border-b border-gray-100 hover:bg-gray-50 dark:hover:bg-gray-700 dark:border-gray-700">
       <img class="flex-shrink-0 object-cover w-8 h-8 mx-1 rounded-full"
         src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
         alt="avatar" />
-      <p class="mx-2 text-sm text-gray-600 dark:text-white"><span class="font-bold" href="#">Sara Salah</span> replied
-        on the <span class="font-bold text-blue-500" href="#">Upload Image</span> artical . 2m</p>
+      <p class="mx-2 text-sm text-gray-600 dark:text-white"><span class="font-bold" routerLink="#">Sara Salah</span> replied
+        on the <span class="font-bold text-blue-500" routerLink="#">Upload Image</span> artical . 2m</p>
     </a>
-    <a href="#"
+    <a routerLink="#"
       class="flex items-center px-4 py-3 -mx-2 transition-colors duration-200 transform border-b border-gray-100 hover:bg-gray-50 dark:hover:bg-gray-700 dark:border-gray-700">
       <img class="flex-shrink-0 object-cover w-8 h-8 mx-1 rounded-full"
         src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
         alt="avatar" />
-      <p class="mx-2 text-sm text-gray-600 dark:text-white"><span class="font-bold" href="#">Slick Net</span> start
+      <p class="mx-2 text-sm text-gray-600 dark:text-white"><span class="font-bold" routerLink="#">Slick Net</span> start
         following you . 45m</p>
     </a>
-    <a href="#"
+    <a routerLink="#"
       class="flex items-center px-4 py-3 -mx-2 transition-colors duration-200 transform border-b border-gray-100 hover:bg-gray-50 dark:hover:bg-gray-700 dark:border-gray-700">
       <img class="flex-shrink-0 object-cover w-8 h-8 mx-1 rounded-full"
         src="https://images.unsplash.com/photo-1450297350677-623de575f31c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
         alt="avatar" />
-      <p class="mx-2 text-sm text-gray-600 dark:text-white"><span class="font-bold" href="#">Jane Doe</span> Like Your
-        reply on <span class="font-bold text-blue-500" href="#">Test with TDD</span> artical . 1h</p>
+      <p class="mx-2 text-sm text-gray-600 dark:text-white"><span class="font-bold" routerLink="#">Jane Doe</span> Like Your
+        reply on <span class="font-bold text-blue-500" routerLink="#">Test with TDD</span> artical . 1h</p>
     </a>
-    <a href="#"
+    <a routerLink="#"
       class="flex items-center px-4 py-3 -mx-2 transition-colors duration-200 transform hover:bg-gray-100 dark:hover:bg-gray-700">
       <img class="flex-shrink-0 object-cover w-8 h-8 mx-1 rounded-full"
         src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=398&q=80"
         alt="avatar" />
-      <p class="mx-2 text-sm text-gray-600 dark:text-white"><span class="font-bold" href="#">Abigail Bennett</span>
+      <p class="mx-2 text-sm text-gray-600 dark:text-white"><span class="font-bold" routerLink="#">Abigail Bennett</span>
         start following you . 3h</p>
     </a>
-    <a href="#" class="block py-2 font-bold text-center text-white bg-gray-800 dark:bg-gray-700 hover:underline">See all
+    <a routerLink="#" class="block py-2 font-bold text-center text-white bg-gray-800 dark:bg-gray-700 hover:underline">See all
       notifications
     </a>
   </mat-menu>
