--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<app-authorization></app-authorization>
 <!-- Nav -->
 <div class="bg-white shadow dark:bg-gray-800 px-3 py-3 mx-auto">
   <!-- <div class="container px-3 py-3 mx-auto"> -->
