--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,18 @@
 <app-authorization></app-authorization>
 <!-- Nav -->
   <!-- <div class="container px-3 py-3 mx-auto"> -->
+    <div [ngClass]="styleModeService.mode === 'light' ? 'light-mode' : 'dark-mode'">
 
     <app-header></app-header>
-
+      <!-- your content here -->
     <!-- Container pages -->
-  <app-spinner></app-spinner>
-
+    <section [ngClass]="styleModeService.mode === 'light' ? 'bg-white' : 'bg-gray-900'">
+      <app-spinner></app-spinner>
+    </section>
   <router-outlet></router-outlet>
 <!-- Footer -->
 <!-- <app-footer-bottom ></app-footer-bottom> -->
 <app-footer></app-footer>
+</div>
 
 
