--- a/src/app/footer/faq/faq.component.html
+++ b/src/app/footer/faq/faq.component.html
@@ -1,12 +1,24 @@
 
-    <section class="bg-white dark:bg-gray-900">
+    <section [ngClass]="styleModeService.mode === 'light' ?
+'bg-white' :
+'bg-gray-900'">
       <div class="container max-w-4xl px-6 py-10 mx-auto">
-          <h1 class="text-4xl font-semibold text-center text-gray-800 dark:text-white">Frequently asked questions</h1>
+          <h1 [ngClass]="styleModeService.mode === 'light' ?
+          'text-3xl font-semibold text-center text-gray-800' :
+          'text-3xl font-semibold text-center text-white'">Frequently asked questions</h1>
 
           <div class="mt-12 space-y-8">
-              <div class="border-2 border-gray-100 rounded-lg dark:border-gray-700">
+              <div
+              [ngClass]="styleModeService.mode === 'light' ?
+          'border-2 border-gray-100 rounded-lg' :
+          'border-2 rounded-lg border-gray-700'"
+              >
                   <button class="flex items-center justify-between w-full p-8">
-                      <h1 class="font-semibold text-gray-700 dark:text-white">How i can play for my appoinment ?</h1>
+                      <h1
+                      [ngClass]="styleModeService.mode === 'light' ?
+          'font-semibold text-gray-700' :
+          'font-semibold text-white'"
+                      >How i can play for my appointment ?</h1>
 
                       <span class="text-gray-400 bg-gray-200 rounded-full">
                           <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -15,16 +27,28 @@
                       </span>
                   </button>
 
-                  <hr class="border-gray-200 dark:border-gray-700">
+                  <hr
+                  [ngClass]="styleModeService.mode === 'light' ?
+          'border-gray-200' :
+          'border-gray-700'"
+                  >
 
-                  <p class="p-8 text-sm text-gray-500 dark:text-gray-300">
+                  <p
+                  [ngClass]="styleModeService.mode === 'light' ?
+                  'p-8 text-sm text-gray-500' :
+                  'p-8 text-sm text-gray-300'"
+                  >
                       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas eaque nobis, fugit odit omnis fugiat deleniti animi ab maxime cum laboriosam recusandae facere dolorum veniam quia pariatur obcaecati illo ducimus?
                   </p>
               </div>
 
-              <div class="border-2 border-gray-100 rounded-lg dark:border-gray-700">
+              <div [ngClass]="styleModeService.mode === 'light' ?
+          'border-2 border-gray-100 rounded-lg' :
+          'border-2 rounded-lg border-gray-700'">
                   <button class="flex items-center justify-between w-full p-8">
-                      <h1 class="font-semibold text-gray-700 dark:text-white">Is the cost of the appoinment covered by private health insurance?</h1>
+                      <h1 [ngClass]="styleModeService.mode === 'light' ?
+          'font-semibold text-gray-700' :
+          'font-semibold text-white'">Is the cost of the appoinment covered by private health insurance?</h1>
 
                       <span class="text-white bg-blue-500 rounded-full">
                           <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -34,9 +58,13 @@
                   </button>
               </div>
 
-              <div class="border-2 border-gray-100 rounded-lg dark:border-gray-700">
+              <div [ngClass]="styleModeService.mode === 'light' ?
+          'border-2 border-gray-100 rounded-lg' :
+          'border-2 rounded-lg border-gray-700'">
                   <button class="flex items-center justify-between w-full p-8">
-                      <h1 class="font-semibold text-gray-700 dark:text-white">Do i need a referral?</h1>
+                      <h1 [ngClass]="styleModeService.mode === 'light' ?
+          'font-semibold text-gray-700' :
+          'font-semibold text-white'">Do i need a referral?</h1>
 
                       <span class="text-white bg-blue-500 rounded-full">
                           <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
