--- a/src/app/footer/how/how.component.html
+++ b/src/app/footer/how/how.component.html
@@ -1,10 +1,16 @@
-<section class="bg-white dark:bg-gray-900">
+<section [ngClass]="styleModeService.mode === 'light' ?
+'bg-white' :
+'bg-gray-900'">
   <div class="container px-6 py-10 mx-auto">
-    <h1 class="text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white">
+    <h1 [ngClass]="styleModeService.mode === 'light' ?
+    'text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl ' :
+    'text-3xl font-semibold text-center capitalize lg:text-4xl text-white'">
       كيف صنعت هذا النظام
     </h1>
 
-    <p class="max-w-2xl mx-auto my-6 text-center text-gray-500 dark:text-gray-300">
+    <p [ngClass]="styleModeService.mode === 'light' ?
+              'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+              'max-w-2xl mx-auto my-6 text-center text-gray-300'">
 لقد تم صنع هذا النظام على عدة مراحل
 فقد تم ايجاد الفكرة بالاول والتي كانت موجودة وهي سنة الرسول ص
 ثم بدات بانشاء التصاميم
