--- a/src/app/footer/what/what.component.html
+++ b/src/app/footer/what/what.component.html
@@ -1,13 +1,22 @@
-<section class="bg-white dark:bg-gray-900">
+<section
+[ngClass]="styleModeService.mode === 'light' ?
+'bg-white' :
+'bg-gray-900'"
+>
   <div class="container px-6 py-10 mx-auto">
     <h1
-      class="text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white"
+    [ngClass]="styleModeService.mode === 'light' ?
+    'text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl ' :
+    'text-3xl font-semibold text-center capitalize lg:text-4xl text-white'"
     >
     ماذا تستطيع ان تفعل بهذا الموقع
     </h1>
 
     <p
-      class="max-w-2xl mx-auto my-6 text-center text-gray-500 dark:text-gray-300"
+    [ngClass]="styleModeService.mode === 'light' ?
+              'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+              'max-w-2xl mx-auto my-6 text-center text-gray-300'"
+
     >
       غاية هذا الموقع هي صنع نظام عالم اسلامي من اجل ايجاد قائد واحد لكل عبيد الله من البشر من اجل تنظيمهم واعطائهم حقوقهم  كي ينفذوا غاية الله من خلقه وهي عبادة الله سبحانه و تعالى عن طريق اداء فرائضه واعمار ارضه.
       والغاية الاخرى هي ايجاد وزراء اكفاء من اجل تثبيت قرارت القائد الصائبة وردع قرارات القائد الخاطئة.
