--- a/src/app/footer/why/why.component.html
+++ b/src/app/footer/why/why.component.html
@@ -1,14 +1,20 @@
-<section class="bg-white dark:bg-gray-900">
+<section [ngClass]="styleModeService.mode === 'light' ?
+'bg-white' :
+'bg-gray-900'">
   <div class="container px-6 py-10 mx-auto">
     <h1
-      class="text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white"
+      [ngClass]="styleModeService.mode === 'light' ?
+    'text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl ' :
+    'text-3xl font-semibold text-center capitalize lg:text-4xl text-white'"
     >
 
     لماذا بدات هذا الموقع
     </h1>
 
     <p
-      class="max-w-2xl mx-auto my-6 text-center text-gray-500 dark:text-gray-300"
+      [ngClass]="styleModeService.mode === 'light' ?
+              'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+              'max-w-2xl mx-auto my-6 text-center text-gray-300'"
     >
     بسم الله الرحمن الرحيم إِنَّ هَٰذِهِ أُمَّتُكُمْ أُمَّةً وَاحِدَةً وَأَنَا رَبُّكُمْ فَاعْبُدُونِ (92) صدق الله العظيم
     كل المسلمون هم امة واحدة حتى لو كانوا شعوب معتلفة ولذلك يجب على المسلمون ان يتوحدوا تحت حكم واحد من اجل منع الظلم واحلال العدل فاذا انتشر العدل فاعلم ان حياة البشر ستزدهر.
