--- a/src/app/pages/muslims/ministries/ministries.component.html
+++ b/src/app/pages/muslims/ministries/ministries.component.html
@@ -1,19 +1,27 @@
-<section class="bg-white dark:bg-gray-900">
+<section [ngClass]="styleModeService.mode === 'light' ?
+'bg-white' :
+'bg-gray-900'">
 
   <div class="container px-6 py-10 mx-auto">
 
-    <h1 class="text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white">
+    <h1 [ngClass]="styleModeService.mode === 'light' ?
+    'text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl ' :
+    'text-3xl font-semibold text-center capitalize lg:text-4xl text-white'">
       ولات الامر
     </h1>
 
-    <p class="max-w-2xl mx-auto my-6 text-center text-gray-500 dark:text-gray-300">
+    <p [ngClass]="styleModeService.mode === 'light' ?
+              'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+              'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       عن علي بن أبي طالب أن الرسول قال: «إنَّهُ لم يَكُن قبلي نبيٌّ إلا قد أُعْطيَ سبعةَ رفقاءَ نُجباءَ، وزراءَ، وإنِّي
       أعطيتُ أربعةَ عشرَ: حمزةُ، وجعفرٌ وعليٌّ وحسنٌ وحُسَيْنٌ وأبو بَكْرٍ وعمرُ والمقدادُ وعبدُ اللَّهِ بنُ مسعودٍ،
       وأبو ذرٍّ وحُذَيْفةُ، وسلمانُ، وعمَّارٌ، وبلالٌ».
     </p>
     <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-16 md:grid-cols-2 xl:grid-cols-2">
 
-    <div *ngFor="let minster of caliph" class="max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-lg dark:bg-gray-800">
+    <div *ngFor="let minster of caliph" [ngClass]="styleModeService.mode === 'light' ?
+                      'max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-lg' :
+                      'max-w-sm mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-800'">
       <img class="object-cover object-center w-full h-56" src="{{ minster.img }}" alt="avatar">
 
       <div class="flex items-center px-6 py-3 bg-gray-900">
@@ -25,11 +33,17 @@
       </div>
 
       <div class="px-6 py-4">
-          <h1 class="text-xl font-semibold text-gray-800 dark:text-white">{{ minster.name }}</h1>
+          <h1 [ngClass]="styleModeService.mode === 'light' ?
+                      'text-xl font-semibold text-gray-800' :
+                      'text-xl font-semibold text-white'">{{ minster.name }}</h1>
 
-          <p class="py-2 text-gray-700 dark:text-gray-400">Full Stack maker & UI / UX Designer , love hip hop music Author of Building UI.</p>
+          <p [ngClass]="styleModeService.mode === 'light' ?
+                      'py-2 text-gray-700' :
+                      'py-2 text-gray-400'">Full Stack maker & UI / UX Designer , love hip hop music Author of Building UI.</p>
 
-          <div class="flex items-center mt-4 text-gray-700 dark:text-gray-200">
+          <div [ngClass]="styleModeService.mode === 'light' ?
+                      'flex items-center mt-4 text-gray-700' :
+                      'flex items-center mt-4 text-gray-200'">
               <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M14 11H10V13H14V11Z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M7 5V4C7 2.89545 7.89539 2 9 2H15C16.1046 2 17 2.89545 17 4V5H20C21.6569 5 23 6.34314 23 8V18C23 19.6569 21.6569 21 20 21H4C2.34314 21 1 19.6569 1 18V8C1 6.34314 2.34314 5 4 5H7ZM9 4H15V5H9V4ZM4 7C3.44775 7 3 7.44769 3 8V14H21V8C21 7.44769 20.5522 7 20 7H4ZM3 18V16H21V18C21 18.5523 20.5522 19 20 19H4C3.44775 19 3 18.5523 3 18Z"/>
               </svg>
@@ -37,7 +51,9 @@
               <h1 class="px-2 text-sm">Meraki UI</h1>
           </div>
 
-          <div class="flex items-center mt-4 text-gray-700 dark:text-gray-200">
+          <div [ngClass]="styleModeService.mode === 'light' ?
+                      'flex items-center mt-4 text-gray-700' :
+                      'flex items-center mt-4 text-gray-200'">
               <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M16.2721 10.2721C16.2721 12.4813 14.4813 14.2721 12.2721 14.2721C10.063 14.2721 8.27214 12.4813 8.27214 10.2721C8.27214 8.063 10.063 6.27214 12.2721 6.27214C14.4813 6.27214 16.2721 8.063 16.2721 10.2721ZM14.2721 10.2721C14.2721 11.3767 13.3767 12.2721 12.2721 12.2721C11.1676 12.2721 10.2721 11.3767 10.2721 10.2721C10.2721 9.16757 11.1676 8.27214 12.2721 8.27214C13.3767 8.27214 14.2721 9.16757 14.2721 10.2721Z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M5.79417 16.5183C2.19424 13.0909 2.05438 7.3941 5.48178 3.79418C8.90918 0.194258 14.6059 0.0543983 18.2059 3.48179C21.8058 6.90919 21.9457 12.606 18.5183 16.2059L12.3124 22.7241L5.79417 16.5183ZM17.0698 14.8268L12.243 19.8965L7.17324 15.0698C4.3733 12.404 4.26452 7.9732 6.93028 5.17326C9.59603 2.37332 14.0268 2.26454 16.8268 4.93029C19.6267 7.59604 19.7355 12.0269 17.0698 14.8268Z"/>
               </svg>
@@ -45,7 +61,9 @@
               <h1 class="px-2 text-sm">California</h1>
           </div>
 
-          <div class="flex items-center mt-4 text-gray-700 dark:text-gray-200">
+          <div [ngClass]="styleModeService.mode === 'light' ?
+                      'flex items-center mt-4 text-gray-700' :
+                      'flex items-center mt-4 text-gray-200'">
               <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M3.00977 5.83789C3.00977 5.28561 3.45748 4.83789 4.00977 4.83789H20C20.5523 4.83789 21 5.28561 21 5.83789V17.1621C21 18.2667 20.1046 19.1621 19 19.1621H5C3.89543 19.1621 3 18.2667 3 17.1621V6.16211C3 6.11449 3.00333 6.06765 3.00977 6.0218V5.83789ZM5 8.06165V17.1621H19V8.06199L14.1215 12.9405C12.9499 14.1121 11.0504 14.1121 9.87885 12.9405L5 8.06165ZM6.57232 6.80554H17.428L12.7073 11.5263C12.3168 11.9168 11.6836 11.9168 11.2931 11.5263L6.57232 6.80554Z"/>
               </svg>
@@ -54,7 +72,9 @@
           </div>
       </div>
     </div>
-    <div *ngFor="let minster of primeMinister" class="max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-lg dark:bg-gray-800">
+    <div *ngFor="let minster of primeMinister" [ngClass]="styleModeService.mode === 'light' ?
+                      'max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-lg' :
+                      'max-w-sm mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-800'">
       <img class="object-cover object-center w-full h-56" src="{{ minster.img }}" alt="avatar">
 
       <div class="flex items-center px-6 py-3 bg-gray-900">
@@ -66,11 +86,17 @@
       </div>
 
       <div class="px-6 py-4">
-          <h1 class="text-xl font-semibold text-gray-800 dark:text-white">{{ minster.name }}</h1>
+          <h1 [ngClass]="styleModeService.mode === 'light' ?
+                      'text-xl font-semibold text-gray-800' :
+                      'text-xl font-semibold text-white'">{{ minster.name }}</h1>
 
-          <p class="py-2 text-gray-700 dark:text-gray-400">Full Stack maker & UI / UX Designer , love hip hop music Author of Building UI.</p>
+          <p [ngClass]="styleModeService.mode === 'light' ?
+                      'py-2 text-gray-700' :
+                      'py-2 text-gray-400'">Full Stack maker & UI / UX Designer , love hip hop music Author of Building UI.</p>
 
-          <div class="flex items-center mt-4 text-gray-700 dark:text-gray-200">
+          <div [ngClass]="styleModeService.mode === 'light' ?
+                      'flex items-center mt-4 text-gray-700' :
+                      'flex items-center mt-4 text-gray-200'">
               <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M14 11H10V13H14V11Z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M7 5V4C7 2.89545 7.89539 2 9 2H15C16.1046 2 17 2.89545 17 4V5H20C21.6569 5 23 6.34314 23 8V18C23 19.6569 21.6569 21 20 21H4C2.34314 21 1 19.6569 1 18V8C1 6.34314 2.34314 5 4 5H7ZM9 4H15V5H9V4ZM4 7C3.44775 7 3 7.44769 3 8V14H21V8C21 7.44769 20.5522 7 20 7H4ZM3 18V16H21V18C21 18.5523 20.5522 19 20 19H4C3.44775 19 3 18.5523 3 18Z"/>
               </svg>
@@ -78,7 +104,9 @@
               <h1 class="px-2 text-sm">Meraki UI</h1>
           </div>
 
-          <div class="flex items-center mt-4 text-gray-700 dark:text-gray-200">
+          <div [ngClass]="styleModeService.mode === 'light' ?
+                      'flex items-center mt-4 text-gray-700' :
+                      'flex items-center mt-4 text-gray-200'">
               <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M16.2721 10.2721C16.2721 12.4813 14.4813 14.2721 12.2721 14.2721C10.063 14.2721 8.27214 12.4813 8.27214 10.2721C8.27214 8.063 10.063 6.27214 12.2721 6.27214C14.4813 6.27214 16.2721 8.063 16.2721 10.2721ZM14.2721 10.2721C14.2721 11.3767 13.3767 12.2721 12.2721 12.2721C11.1676 12.2721 10.2721 11.3767 10.2721 10.2721C10.2721 9.16757 11.1676 8.27214 12.2721 8.27214C13.3767 8.27214 14.2721 9.16757 14.2721 10.2721Z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M5.79417 16.5183C2.19424 13.0909 2.05438 7.3941 5.48178 3.79418C8.90918 0.194258 14.6059 0.0543983 18.2059 3.48179C21.8058 6.90919 21.9457 12.606 18.5183 16.2059L12.3124 22.7241L5.79417 16.5183ZM17.0698 14.8268L12.243 19.8965L7.17324 15.0698C4.3733 12.404 4.26452 7.9732 6.93028 5.17326C9.59603 2.37332 14.0268 2.26454 16.8268 4.93029C19.6267 7.59604 19.7355 12.0269 17.0698 14.8268Z"/>
               </svg>
@@ -86,7 +114,9 @@
               <h1 class="px-2 text-sm">California</h1>
           </div>
 
-          <div class="flex items-center mt-4 text-gray-700 dark:text-gray-200">
+          <div [ngClass]="styleModeService.mode === 'light' ?
+                      'flex items-center mt-4 text-gray-700' :
+                      'flex items-center mt-4 text-gray-200'">
               <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M3.00977 5.83789C3.00977 5.28561 3.45748 4.83789 4.00977 4.83789H20C20.5523 4.83789 21 5.28561 21 5.83789V17.1621C21 18.2667 20.1046 19.1621 19 19.1621H5C3.89543 19.1621 3 18.2667 3 17.1621V6.16211C3 6.11449 3.00333 6.06765 3.00977 6.0218V5.83789ZM5 8.06165V17.1621H19V8.06199L14.1215 12.9405C12.9499 14.1121 11.0504 14.1121 9.87885 12.9405L5 8.06165ZM6.57232 6.80554H17.428L12.7073 11.5263C12.3168 11.9168 11.6836 11.9168 11.2931 11.5263L6.57232 6.80554Z"/>
               </svg>
@@ -101,7 +131,9 @@
 
   </div>
 </section>
-<section class="bg-white dark:bg-gray-900">
+<section [ngClass]="styleModeService.mode === 'light' ?
+'bg-white' :
+'bg-gray-900'">
 
 
 
@@ -110,12 +142,18 @@
       <div *ngFor="let minster of minsters" class="flex justify-center flex-col items-center p-8 transition-colors duration-200 transform cursor-pointer group hover:bg-blue-600 rounded-xl">
         <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="{{ minster.img }}" alt="">
 
-        <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">{{ minster.name }}</h1>
+        <h1 [ngClass]="styleModeService.mode === 'light' ?
+        'mt-4 text-2xl font-semibold text-gray-700 capitalize group-hover:text-white' :
+        'mt-4 text-2xl font-semibold capitalize text-white group-hover:text-white'">{{ minster.name }}</h1>
 
-        <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">{{ minster.position }}</p>
+        <p [ngClass]="styleModeService.mode === 'light' ?
+        'mt-2 text-gray-500 capitalize group-hover:text-gray-300' :
+        'mt-2 capitalize text-gray-300 group-hover:text-gray-300'">{{ minster.position }}</p>
 
         <div class="flex mt-3 -mx-2">
-            <a routerLink="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Reddit">
+            <a routerLink="#" [ngClass]="styleModeService.mode === 'light' ?
+            'mx-2 text-gray-600 hover:text-gray-500 group-hover:text-white' :
+            'mx-2 text-gray-300 hover:text-gray-300 group-hover:text-white'" aria-label="Reddit">
                 <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -124,7 +162,9 @@
                 </svg>
             </a>
 
-            <a routerLink="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white"
+            <a routerLink="#" [ngClass]="styleModeService.mode === 'light' ?
+            'mx-2 text-gray-600 hover:text-gray-500 group-hover:text-white' :
+            'mx-2 text-gray-300 hover:text-gray-300 group-hover:text-white'"
                 aria-label="Facebook">
                 <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -134,7 +174,9 @@
                 </svg>
             </a>
 
-            <a routerLink="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Github">
+            <a routerLink="#" [ngClass]="styleModeService.mode === 'light' ?
+            'mx-2 text-gray-600 hover:text-gray-500 group-hover:text-white' :
+            'mx-2 text-gray-300 hover:text-gray-300 group-hover:text-white'" aria-label="Github">
                 <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
