--- a/src/app/pages/religions/religions-books/quran/aya/aya.component.html
+++ b/src/app/pages/religions/religions-books/quran/aya/aya.component.html
@@ -1,8 +1,16 @@
-<section class="bg-white dark:bg-green-900">
+<section
+[ngClass]="styleModeService.mode === 'light' ?
+            'bg-white' :
+            'bg-green-900'"
+>
   <div class="container px-6 py-16 mx-auto text-center">
       <div *ngFor="let ayaah of ayatext" class="max-w-lg mx-auto">
         <p>{{ayaah.aya[0].bismillah}}</p>
-          <h1 class="text-3xl font-bold text-gray-800 dark:text-white md:text-4xl">
+          <h1
+          [ngClass]="styleModeService.mode === 'light' ?
+            'text-3xl font-bold text-gray-800 md:text-4xl' :
+            'text-3xl font-bold text-white md:text-4xl'"
+          >
             <p>سورة {{ayaah.name}}</p>
 
           </h1>
@@ -10,11 +18,19 @@
             <a> {{text.text}} </a>
             <label><i class="fas fa-certificate"></i></label>
           </li>
-          <p class="mt-6 text-gray-500 dark:text-gray-300">
+          <p
+          [ngClass]="styleModeService.mode === 'light' ?
+            'mt-6 text-gray-500' :
+            'mt-6 text-gray-300'"
+          >
               الشرح
           </p>
 
-          <div class="w-full max-w-sm mx-auto mt-6 bg-transparent border rounded-md dark:border-gray-700 focus-within:border-blue-400 focus-within:ring focus-within:ring-blue-300 dark:focus-within:border-blue-300 focus-within:ring-opacity-40">
+          <div
+          [ngClass]="styleModeService.mode === 'light' ?
+          'w-full max-w-sm mx-auto mt-6 bg-transparent border rounded-md focus-within:border-blue-400 focus-within:ring focus-within:ring-blue-300 focus-within:ring-opacity-40' :
+          'w-full max-w-sm mx-auto mt-6 bg-transparent border rounded-md border-gray-700 focus-within:ring focus-within:ring-blue-300 focus-within:border-blue-300 focus-within:ring-opacity-40'"
+          >
               <form class="flex flex-col md:flex-row">
                 <button (click)="moveright()" type="button" class="h-10 px-4 py-2 m-1 text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
                   اللاحق
