--- a/src/app/pages/the-creator/names/names.component.html
+++ b/src/app/pages/the-creator/names/names.component.html
@@ -2,23 +2,37 @@
 <div class="mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:gap-x-8">
 
     <div *ngFor="let Name of Names"
-      class="max-w-xl bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+    [ngClass]="styleModeService.mode === 'light' ?
+            'max-w-xl bg-white rounded-lg border border-gray-200 shadow-md' :
+            'max-w-xl rounded-lg border shadow-md bg-gray-800 border-gray-700'"
+      >
       <!-- <a routerLink="#">
 					<img class="rounded-t-lg px-5 py-2"  src="http://placeimg.com/640/480/sports" alt="step3">
     </a> -->
       <div class="p-5">
         <a routerLink="#">
-          <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+          <h5
+          [ngClass]="styleModeService.mode === 'light' ?
+            'mb-2 text-2xl font-bold tracking-tight text-gray-900' :
+            'mb-2 text-2xl font-bold tracking-tight text-white'"
+          >
             {{ Name.name}}</h5>
 
         </a>
         <div class="text-xs font-bold uppercase text-teal-700 mt-1 mb-2"> {{ Name.en.meaning}}
         </div>
-        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+        <p
+        [ngClass]="styleModeService.mode === 'light' ?
+            'mb-3 font-normal text-gray-700' :
+            'mb-3 font-normal text-gray-400'"
+        >
           {{ Name.en.desc}}
         </p>
         <a routerLink="names/{{ Name.id}}"
-          class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+        [ngClass]="styleModeService.mode === 'light' ?
+        'inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 ' :
+        'inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white rounded-lg focus:ring-4 focus:outline-none bg-blue-600 hover:bg-blue-700 focus:ring-blue-800'"
+          >
           Read more
         </a>
       </div>
