--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,11 @@ p{
   font-family: 'Droid Arabic Kufi', serif;
   color:aliceblue;
 }
+.light-mode {
+  background-color: #fff;
+  color: #000;
+}
+.dark-mode {
+  background-color: #333;
+  color: #fff;
+}
