--- a/src/app/pages/creatures/creatures.component.html
+++ b/src/app/pages/creatures/creatures.component.html
@@ -84,7 +84,9 @@
       لهم دار السلام عند ربهم
     </p>
 
-      <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
 
       بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ
 
@@ -93,14 +95,18 @@
       قَالَ رَبُّنَا الَّذِي أَعْطَىٰ كُلَّ شَيْءٍ خَلْقَهُ ثُمَّ هَدَىٰ
       وقال الضحاك عن ابن عباس : جعل الإنسان إنسانا ، والحمار حمارا ، والشاة شاة .
     </p>
-  <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
 
       الوحي
       اذ يوحي ربك الى الملائكة اني معكم فثبتوا الذين امنوا
 
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       قُلْ أَئِنَّكُمْ لَتَكْفُرُونَ بِالَّذِي خَلَقَ الأَرْضَ فِي يَوْمَيْنِ وَتَجْعَلُونَ لَهُ أَندَادًا ذَلِكَ رَبُّ الْعَالَمِينَ
 
       وَجَعَلَ فِيهَا رَوَاسِيَ مِن فَوْقِهَا وَبَارَكَ فِيهَا وَقَدَّرَ فِيهَا أَقْوَاتَهَا فِي أَرْبَعَةِ أَيَّامٍ سَوَاء لِّلسَّائِلِينَ
@@ -111,20 +117,28 @@
 
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       الوحي محرك الوجود
 
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       الانسان لايؤمن بالتخوم
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       لماذا للانسان لديه وعي موسيقي ميتافيزيقي رياضي  فني فلسفي
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       فاذا سويته ونفخت فيه من روحي فقعوا لهوا ساجدين
       لانه سيتجاوزكم على مستوى الوعي
       لانه سيصير اقدر ان يطلب الله
@@ -136,23 +150,31 @@
 
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       تُسَبِّحُ لَهُ ٱلسَّمَٰوَٰتُ ٱلسَّبْعُ وَٱلْأَرْضُ وَمَن فِيهِنَّ ۚ وَإِن مِّن شَىْءٍ إِلَّا يُسَبِّحُ بِحَمْدِهِۦ وَلَٰكِن لَّا تَفْقَهُونَ تَسْبِيحَهُمْ ۗ إِنَّهُۥ كَانَ حَلِيمًا غَفُورًا
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       عالم المايكروبات روبرت كوخ
 
       https://www.marefa.org/%D8%B1%D9%88%D8%A8%D8%B1%D8%AA_%D9%83%D9%88%D8%AE
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       أنطوني فان ليفينهوك
       مخترع المايكروسكوب
       https://ar.wikipedia.org/wiki/%D8%A3%D9%86%D8%B7%D9%88%D9%86%D9%8A_%D9%81%D8%A7%D9%86_%D9%84%D9%8A%D9%81%D9%8A%D9%86%D9%87%D9%88%D9%83#:~:text=%D8%A3%D9%86%D8%B7%D9%88%D9%86%D9%8A%20%D9%81%D8%A7%D9%86%20%D9%84%D9%8A%D9%81%D9%8A%D9%86%D9%87%D9%88%D9%83%20(%D8%A8%D8%A7%D9%84%D9%87%D9%88%D9%84%D9%86%D8%AF%D9%8A%D8%A9%3A%20Anton,%D8%A3%D9%88%D8%A7%D8%A6%D9%84%20%D8%A7%D9%84%D8%B9%D9%84%D9%85%D8%A7%D8%A1%20%D8%A7%D9%84%D8%B0%D9%8A%D9%86%20%D8%A7%D8%B3%D8%AA%D8%AE%D8%AF%D9%85%D9%88%D8%A7%20%D8%A7%D9%84%D8%B9%D8%AF%D8%B3%D8%A7%D8%AA.
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       عدم الوجدان لايعني عدم الوجود
       وجود الله ضمانة  على الا يهدر وجود اي موجود
       اي موجود يحب ان يوعى به
@@ -161,7 +183,9 @@
       بيرلك
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       ابو حامد الغزالي
       كل ماوجد او سيوجد في علم الله الازلي
       لذلك الله عندما يريده ان يكون يقول له كن فيكون
@@ -178,11 +202,15 @@
       الاهم من هذا كله هو رتبة الوجود العلمي في علم الله
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       لم العلم يكون علم محيطا قيوميا مهيمن دقيقا لايدع شيء من اوضاع الشيء الى حاط به ومقادره الى حاط به لايضيف اي شيء بين وجود الشيء في الخارج ووجوده في العلم
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       اذا كان الطيف المراي بطول واحد متر الى اثنان متر
       فبقيو الطيف غير المراي يساوي مثةوخمسين مليون كيلو متر
       فلا اقسم بما تبصرون ومالاتبصرون
@@ -191,17 +219,23 @@
       الدماغ لايعالج منها الى 3 ملايين
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       ولا يعلم جنود ربك الى هو
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       والطير صافات كل قد علم صلاة وتسبيحه
       ما عضد شجر ولا قطع نبات الى بتقصيره في التسبيح
 
     </p>
 
-    <p>
+    <p [ngClass]="styleModeService.mode === 'light' ?
+    'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+    'max-w-2xl mx-auto my-6 text-center text-gray-300'">
       John Archibald Wheeler the techer of Richard Feynman
       mystical theory
       scientific theory
