--- a/src/app/pages/muslims/muslims.component.html
+++ b/src/app/pages/muslims/muslims.component.html
@@ -1,5 +1,5 @@
 
-<div class="py-3 mt-3 -mx-3 overflow-y-auto whitespace-nowrap scroll-hidden">
+<div class="py-3 overflow-y-auto whitespace-nowrap scroll-hidden">
   <!-- <a [ngClass]="styleModeService.mode === 'light' ?
   'mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform hover:text-blue-600 hover:underline md:my-0' :
   'mx-4 text-sm leading-5 transition-colors duration-200 transform text-gray-200 hover:text-blue-400 hover:underline md:my-0'"
@@ -49,7 +49,11 @@
   'mx-4 text-sm leading-5 transition-colors duration-200 transform text-gray-200 hover:text-blue-400 hover:underline md:my-0'"
     routerLink="quran">القران</a>
 </div>
+<p [ngClass]="styleModeService.mode === 'light' ?
+'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+'max-w-2xl mx-auto my-6 text-center text-gray-300'">
 قوله صلى الله عليه وسلم: ((ثلاث لا يغل عليهن قلب مسلم: إخلاص العمل لله، والنصح لأئمة المسلمين، ولزوم جماعتهم فإن دعوتهم تحيط من ورائهم))
+</p>
 <section [ngClass]="styleModeService.mode === 'light' ?
 'bg-white' :
 'bg-gray-900'">
